Updated Widget integration
